unpackaged/main/default/objects/datamask__DM_Object_Metadata__c/fields/datamask__Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>datamask__Parent_Object__c</fullName>
    <label>Parent Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>