unpackaged/main/default/objects/datamask__DM_Object_Metadata__c/fields/datamask__Run_Log__c.field-meta.xml
<CustomField>
    <fullName>datamask__Run_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Run Log</label>
    <referenceTo>datamask__Masking_Execution_Log__c</referenceTo>
    <relationshipName>Object_Data</relationshipName>
    <type>Lookup</type>
</CustomField>