unpackaged/main/default/objects/datamask__DM_Object_Metadata__c/fields/datamask__Update_Status__c.field-meta.xml
<CustomField>
    <fullName>datamask__Update_Status__c</fullName>
    <label>Update Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>