unpackaged/main/default/objects/datamask__DM_Object_Metadata__c/fields/datamask__Version_Number__c.field-meta.xml
<CustomField>
    <fullName>datamask__Version_Number__c</fullName>
    <label>Version Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>