unpackaged/main/default/objects/datamask__DM_Object_Metadata__c/listViews/datamask__All.listView-meta.xml
<ListView>
    <fullName>datamask__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>